<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="expense"
            type="dev.gtcl.travelbank.domain.model.Expense" />
        <import type="android.view.View"/>
        <import type="dev.gtcl.travelbank.UtilKt"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:title="@string/expense_details_title" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".40" />

            <TextView
                android:id="@+id/merchant_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/merchant_label"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/merchant_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:maxLines="3"
                android:text="@{expense.merchantTitle}"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/attachment_preview"
                app:layout_constraintStart_toStartOf="@+id/merchant_label"
                app:layout_constraintTop_toBottomOf="@id/merchant_label"
                tools:text="Lunch" />

            <ImageView
                android:id="@+id/attachment_preview"
                android:layout_width="48dp"
                android:layout_height="24dp"
                android:scaleType="centerCrop"
                android:visibility="@{expense.attachments != null ? View.VISIBLE : View.GONE}"
                android:background="@drawable/round_background"
                android:layout_marginBottom="8dp"
                app:imageUrlRoundedCorners="@{expense.attachments != null ? expense.attachments.get(0).thumbnailFull : null}"
                app:layout_constraintEnd_toEndOf="@id/currency"
                app:layout_constraintTop_toTopOf="@id/merchant_title"
                app:layout_constraintBottom_toBottomOf="@id/merchant_title"
                tools:src="@tools:sample/backgrounds/scenic"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/merchant_underline"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/merchant_title"
                app:layout_constraintTop_toBottomOf="@id/merchant_title" />

            <TextView
                android:id="@+id/expense_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/total_label"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/merchant_underline"
                app:layout_constraintTop_toBottomOf="@id/merchant_underline" />

            <TextView
                android:id="@+id/expense_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:amount="@{expense.amount}"
                app:layout_constraintEnd_toStartOf="@id/attachment_preview"
                app:layout_constraintStart_toStartOf="@+id/expense_label"
                app:layout_constraintTop_toBottomOf="@id/expense_label"
                tools:text="$20.00" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/category_outline"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@{expense.currency}"
                android:textColor="@color/category_color"
                app:layout_constraintBottom_toBottomOf="@id/expense_amount"
                app:layout_constraintEnd_toEndOf="@+id/merchant_underline"
                app:layout_constraintTop_toTopOf="@id/expense_amount"
                tools:text="EUR" />

            <View
                android:id="@+id/amount_underline"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="@+id/currency"
                app:layout_constraintStart_toStartOf="@+id/expense_amount"
                app:layout_constraintTop_toBottomOf="@id/expense_amount" />

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/date_label"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/amount_underline"
                app:layout_constraintTop_toBottomOf="@id/amount_underline" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:maxLines="1"
                android:text="@{UtilKt.convertRemoteDateToMonthDayAndYear(expense.date)}"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/center_guideline"
                app:layout_constraintStart_toStartOf="@+id/amount_underline"
                app:layout_constraintTop_toBottomOf="@id/date_label"
                tools:text="Jul 13, 2021" />

            <View
                android:id="@+id/date_underline"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toStartOf="@id/center_guideline"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@id/date" />

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:text="@string/category_label"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/center_guideline"
                app:layout_constraintTop_toBottomOf="@id/amount_underline"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:maxLines="1"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@{expense.category}"
                app:layout_constraintEnd_toStartOf="@id/category_arrow"
                app:layout_constraintStart_toEndOf="@id/center_guideline"
                app:layout_constraintTop_toBottomOf="@id/date_label"
                tools:text="Meals" />

            <ImageView
                android:id="@+id/category_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next_24"
                app:layout_constraintBottom_toBottomOf="@id/category"
                app:layout_constraintEnd_toEndOf="@+id/amount_underline"
                app:layout_constraintTop_toTopOf="@id/category"
                app:tint="@color/light_grey"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/category_underline"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="@+id/category_arrow"
                app:layout_constraintStart_toEndOf="@id/center_guideline"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:foregroundGravity="top"
                app:cardBackgroundColor="@color/lighter_grey"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="@id/date_underline"
                app:layout_constraintEnd_toEndOf="@id/category_underline"
                app:layout_constraintTop_toBottomOf="@id/category_underline"
                app:layout_constraintBottom_toBottomOf="parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:textSize="14sp"
                    android:gravity="top|start"
                    android:hint="@string/description_hint"
                    android:layout_margin="16dp"
                    android:inputType="textMultiLine"
                    android:importantForAutofill="no" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
